--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=5.6.0",
     "illuminate/support": "^5.3 || ^6.0 || ^7.0 || ^8.0",
     "illuminate/routing": "^5.3 || ^6.0 || ^7.0 || ^8.0",
-    "jimdo/prometheus_client_php": "^0.9.0"
+    "endclothing/prometheus_client_php": "dev-guzzle-7"
   },
   "autoload": {
     "psr-4": {
@@ -36,5 +36,11 @@
   "require-dev": {
     "phpunit/phpunit": "^5.5",
     "mockery/mockery": "^0.9.5"
-  }
+  },
+  "repositories": [
+    {
+        "type": "vcs",
+        "url": "https://github.com/AegirLeet/prometheus_client_php"
+    }
+]
 }
